commands works for real (all of them)
